<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#DBF5FF"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/white_block"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        android:layout_centerInParent="true"
        app:cardElevation="20dp"
        android:background="@color/white" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            tools:ignore="UselessLeaf">

            <TextView
                android:id="@+id/welcome_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/righteous"
                android:text="Welcome Back!"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="#289DCC"
                android:textSize="34sp"
                tools:ignore="HardcodedText" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/username"
                android:isCredential="true"
                android:background="@drawable/detail_box"
                android:drawableLeft="@drawable/baseline_person_24"
                android:importantForAutofill="no"
                android:padding="15dp"
                android:drawablePadding="8dp"
                android:hint="Username"
                android:fontFamily="@font/righteous"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="55dp"
                tools:ignore="HardcodedText,RtlHardcoded,TextFields" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/password"
                android:isCredential="true"
                android:background="@drawable/detail_box"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:importantForAutofill="no"
                android:padding="15dp"
                android:drawablePadding="8dp"
                android:hint="Password"
                android:inputType="numberPassword"
                android:fontFamily="@font/righteous"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="30dp"
                tools:ignore="HardcodedText,RtlHardcoded" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/login_button"
                android:backgroundTint="@color/bluish_logo"
                android:text="@string/login"
                android:textStyle="bold"
                android:fontFamily="@font/righteous"
                android:layout_marginTop="60dp"/>
        </LinearLayout>
        </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_below="@id/white_block"
        android:layout_marginTop="16dp">

        <CheckBox
            android:id="@+id/check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textColor="@color/bluish_logo"
            android:padding="5dp"
            android:textSize="17dp"
            android:button="@null"
            android:drawableLeft="@drawable/image_checkbox"
            android:fontFamily="@font/righteous"
            android:layout_marginLeft="35dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_pass"
            android:fontFamily="@font/righteous"
            android:layout_marginStart="75dp"
            android:padding="4dp"
            android:textSize="17dp"
            android:text="@string/forgot_password"
            android:textColor="@color/bluish_logo" />
    </LinearLayout>

    <TextView
        android:id="@+id/Sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="17dp"
        android:padding="4dp"
        android:fontFamily="@font/righteous"
        android:text="@string/dont_have_an_account_sign_up"
        android:textColor="@color/black" />

</RelativeLayout>