<?xml version="1.0" encoding="utf-8"?>
<StretchedLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DBF5FF"
    tools:context=".HOME_PAGE">

    <TextView
        android:id="@+id/Home_page"
        android:layout_width="500dp"
        android:layout_height="70dp"
        android:paddingLeft="50dp"
        android:paddingTop="13dp"
        android:background="@color/bluish_logo"
        android:fontFamily="@font/righteous"
        android:text="@string/home_page"

        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold" />
    <ImageButton
        android:id="@+id/sign_out_button_home_page"
        android:layout_width="90dp"
        android:layout_height="72dp"
        android:layout_alignParentRight="true"
        android:scaleType="center"
        android:backgroundTint="@color/bluish_logo"
        android:src="@drawable/signout" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/Home_page"
        android:layout_margin="20dp"
        android:columnCount="2"
        android:rowCount="3">
        <androidx.cardview.widget.CardView
            android:id="@+id/card_item_list"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/icon_bg"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="117dp"
                    android:layout_height="98dp"
                    android:src="@drawable/item_list" />

                <TextView
                    android:layout_width="155dp"
                    android:layout_height="80dp"
                    android:textSize="20sp"
                    android:text="@string/item_list"
                    android:fontFamily="@font/righteous"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_Trigger_scheduled_order"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/icon_bg"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="99dp"
                    android:layout_height="82dp"
                    android:src="@drawable/trigger_scheduled_order" />

                <TextView
                    android:layout_width="177dp"
                    android:layout_height="76dp"
                    android:paddingTop="10dp"
                    android:text="@string/trigger_scheduled_order"
                    android:textSize="20sp"
                    android:fontFamily="@font/righteous"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_Real_time_pick_status"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/icon_bg"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="107dp"
                    android:layout_height="90dp"
                    android:src="@drawable/realtime_pick_sts" />

                <TextView
                    android:layout_width="163dp"
                    android:layout_height="54dp"
                    android:fontFamily="@font/righteous"
                    android:paddingTop="2dp"
                    android:text="@string/real_time_pick_status"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_pick_list"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/icon_bg"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="112dp"
                    android:layout_height="102dp"
                    android:src="@drawable/pick_list" />

                <TextView
                    android:layout_width="127dp"
                    android:layout_height="56dp"
                    android:paddingTop="3dp"
                    android:text="@string/pick_list"
                    android:textSize="20sp"
                    android:fontFamily="@font/righteous"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_device_health_status"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/icon_bg"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="110dp"
                    android:src="@drawable/health_and_safety_24" />

                <TextView
                    android:layout_width="138dp"
                    android:layout_height="52dp"
                    android:text="@string/device_health_status"
                    android:textSize="20sp"
                    android:fontFamily="@font/righteous"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_user_profile"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/icon_bg"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="117dp"
                    android:layout_height="107dp"
                    android:src="@drawable/user_profile" />

                <TextView
                    android:layout_width="117dp"
                    android:layout_height="32dp"
                    android:text="@string/user_profile"
                    android:textSize="20sp"
                    android:fontFamily="@font/righteous"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        </GridLayout>


</StretchedLayout>